[package]
name = "hogwarts_guess"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bincode = "1.3.3"
clap = { version = "4.5.20", features = ["derive"] }
message-io = "0.18.2"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
uuid = { version = "1.10.0", features = ["serde", "v4", "fast-rng"] }

[[bin]]
name = "server"

[[bin]]
name = "client"

[[bin]]
name = "admin"
